src/np222kk/dv507/a2/test/cases/negative/test_vararrayaccess.ofp
void main() {
    char[] cA = new char[10];
    char c = cA['c'];   
}